--- a/Labs/Lab01/set-covering.ipynb
+++ b/Labs/Lab01/set-covering.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "def g(state):\n",
-    "    return len(state.taken) #number set taken\n",
+    "    return len(state.taken)/NUM_SETS #number set taken\n",
     "\n",
     "\n",
     "def h(state): #new H has cost determined by the ratio between non covered tiles over the number of set \n",
