added regularizatio term to length

--- a/set-covering.ipynb
+++ b/set-covering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
     "from collections import namedtuple\n",
     "from queue import PriorityQueue, SimpleQueue, LifoQueue\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROBLEM_SIZE = 5\n",
-    "NUM_SETS = 10\n",
+    "PROBLEM_SIZE = 50\n",
+    "NUM_SETS = 100\n",
     "SETS = tuple(\n",
     "    np.array([random() < 0.3 for _ in range(PROBLEM_SIZE)])\n",
     "    for _ in range(NUM_SETS)\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,23 +73,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "6it [00:00, 283.72it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 11 steps (2 tiles)\n"
+      "Solved in 6 steps (5 tiles)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "0.05"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,16 +115,18 @@
     "\n",
     "counter = 0\n",
     "_, current_state = frontier.get()\n",
-    "while not goal_check(current_state):\n",
-    "    counter += 1\n",
-    "    for action in current_state.not_taken:\n",
-    "        new_state = State(\n",
+    "with tqdm(total=None) as pbar:\n",
+    "    while not goal_check(current_state):\n",
+    "        counter += 1\n",
+    "        for action in current_state.not_taken:\n",
+    "            new_state = State(\n",
     "            current_state.taken ^ {action},\n",
     "            current_state.not_taken ^ {action},\n",
     "           \n",
-    "        )\n",
-    "        frontier.put((cost(new_state), new_state))\n",
-    "    current_cost, current_state = frontier.get()\n",
+    "            )\n",
+    "            frontier.put((cost(new_state), new_state))\n",
+    "        current_cost, current_state = frontier.get()\n",
+    "        pbar.update(1)\n",
     "\n",
     "print(\n",
     "    f\"Solved in {counter:,} steps ({len(current_state.taken)} tiles)\"\n",
@@ -119,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "State(taken={0, 5}, not_taken={1, 2, 3, 4, 6, 7, 8, 9})"
+       "State(taken={0, 4, 77, 23, 58}, not_taken={1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99})"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,16 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True, False,  True])"
+       "array([False, False, False,  True,  True, False, False,  True, False,\n",
+       "        True, False,  True, False,  True, False, False, False,  True,\n",
+       "        True, False,  True, False, False, False, False,  True,  True,\n",
+       "        True,  True,  True,  True, False, False, False, False, False,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "        True,  True, False,  True, False])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
