--- a/Labs/Lab10/lab10.ipynb
+++ b/Labs/Lab10/lab10.ipynb
@@ -328,7 +328,7 @@
     "def real_game(load):\n",
     "    counter = 0\n",
     "    if load:\n",
-    "        loadPolicy(\"policy_final_75%\")\n",
+    "        loadPolicy(\"policy_final\")\n",
     "    player_X.practice = False\n",
     "    player_O.practice = False\n",
     "    print(player_X.table_points)\n",
