--- a/Labs/Lab10/lab10.ipynb
+++ b/Labs/Lab10/lab10.ipynb
@@ -394,7 +394,7 @@
     "    player_X.practice = False\n",
     "    player_O.practice = False\n",
     "    if load:\n",
-    "        loadPolicy(\"policy_final_75%\")\n",
+    "        loadPolicy(\"policy_final\")\n",
     "    turn = 0\n",
     "    while ticTacToe._available_moves != 0 :\n",
     "        if turn == 1:\n",
